force all other fields off-heap if we are on MMAP